add students works

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,7 @@
-<h1>Welcome to Student DB APP</h1>
-<a href="/">HOME</a>
-<a href="/addstudent">Add New Student</a>
-<a href="/list">List Student</a>
+{% extends "layout.html" %}
+{% block title %}
+Student Flask App with CRUD
+{% endblock %}
+{% block content %}
+<h1>Welcome to my Student Flask App!</h1>
+{% endblock %}
