--- a/templates/result.html
+++ b/templates/result.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html>
-   <body>
-      {{ msg }}
-      <h2><a href = "\">Back to home page</a></h2>
-   </body>
-</html>
+{% extends "layout.html" %}
+{% block title %}
+Transaction Result
+{% endblock %}
+{% block content %}
+        <strong>Result of the database transaction:</strong> {{ msg }}  
+{% endblock %}
