--- a/templates/list.html
+++ b/templates/list.html
@@ -1,15 +1,14 @@
 {% extends "layout.html" %}
 {% block title %}
-List All Students
+List All Applicants
 {% endblock %}
 {% block content %}
-        <table border="1px">
+    <div style="margin: 0 auto; width: 50%;">
+        <table border="1px" style="width: 100%;">
             <thead>
-                <td><strong>Student ID</strong></td>
+                <td><strong>Applicant ID</strong></td>
                 <td><strong>Name</strong></td>
-                <td><strong>Address</strong></td>
-                <td><strong>City</strong></td>
-                <td><strong>Zip</strong></td>
+                <td><strong>Resy</strong></td>
                 <td></td>
                 <td></td>
             </thead>
@@ -18,12 +17,21 @@ List All Students
             <tr>
                 <td>{{ row["rowid"] }}</td>
                 <td>{{ row["name"] }}</td>
-                <td> {{ row["addr"]}}</td>
-                <td>{{ row["city"] }}</td>
-                <td>{{ row["zip"] }}</td>
-                <td><form action="{{url_for('edit')}}" method="POST"><input type="hidden" name="id" value="{{ row['rowid'] }}"><input type="submit" value="Edit"></form> </td>
-                <td><form onsubmit="return confirm('Are you sure you want to DELETE this Student from the Database?');" action="{{url_for('delete')}}" method="POST"><input type="hidden" name="id" value="{{ row['rowid'] }}"><input type="submit" value="Delete"></form> </td>
+                <td>{{ row["resy"] }}</td>
+                <td>
+                    <form action="{{url_for('edit')}}" method="POST">
+                        <input type="hidden" name="id" value="{{ row['rowid'] }}">
+                        <input type="submit" value="Edit">
+                    </form>
+                </td>
+                <td>
+                    <form onsubmit="return confirm('Are you sure you want to DELETE this Applicant from the Database?');" action="{{url_for('delete')}}" method="POST">
+                        <input type="hidden" name="id" value="{{ row['rowid'] }}">
+                        <input type="submit" value="Delete">
+                    </form>
+                </td>
             </tr>
             {% endfor %}
         </table>
+    </div>
 {% endblock %}
